# lcov2generic

./: Cargo.toml  LICENSE-APACHE  Makefile  README.md
.github/workflows/: ci.yml  publish.yml
src/: main.rs
